crates/flatten/tests/snapshots/snapshots__snap_inline_mod_with_external_nested.snap
---
source: tests/snapshots.rs
expression: flatten(dir.path())
---
pub mod outer {
    pub mod inner { // === src/outer/inner.rs ===
pub fn deep() {}

} // === end src/outer/inner.rs ===

}
