crates/flatten/tests/snapshots/snapshots__snap_nested_via_foo_rs.snap
---
source: tests/snapshots.rs
expression: flatten(dir.path())
---
pub mod outer { // === src/outer.rs ===
pub mod inner { // === src/outer/inner.rs ===
pub fn deep() {}

} // === end src/outer/inner.rs ===


pub fn outer_only() {}

} // === end src/outer.rs ===
