crates/flatten/tests/snapshots/snapshots__snap_path_attr_resolves.snap
---
source: tests/snapshots.rs
expression: flatten(dir.path())
---
#[path = "renamed.rs"]
mod foo { // === src/renamed.rs ===
pub fn x() {}

} // === end src/renamed.rs ===
