crates/flatten/tests/snapshots/snapshots__snap_visibility_variants.snap
---
source: tests/snapshots.rs
expression: flatten(dir.path())
---
pub mod a { // === src/a.rs ===
pub fn a() {}

} // === end src/a.rs ===

pub(crate) mod b { // === src/b.rs ===
pub fn b() {}

} // === end src/b.rs ===

mod c { // === src/c.rs ===
pub fn c() {}

} // === end src/c.rs ===
